<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gdpr_title"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:gravity="center"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:id="@+id/animgdpr"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_fileName="mbilsu.json"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_text"
        android:text="@string/app_gdpr"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="textStart"
        android:gravity="start"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:id="@+id/accept_gdpr"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="45dp">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/gdpr_agree"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/colorAccent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:id="@+id/disagre_gdpr"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="45dp">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/gdpr_disagree"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gdpr_understand"
        android:textStyle="italic"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:gravity="center"
        />

</LinearLayout>
</ScrollView>